[metadata]
name = lakeshack
version = attr: lakeshack.__version__
url = https://github.com/mhendrey/lakeshack
project_urls =
    Source = https://github.com/mhendrey/lakeshack
    Documentation = https://mhendrey.github.io/lakeshack
author = Matthew Hendrey
author_email = matthew.hendrey@gmail.com
classifiers =
    Programming Language :: Python :: 3
license = GNU GPLv3
description = Query parquet files using pyarrow or S3 Select by first gathering file metadata into a database
long_description = file: README.rst
keywords = pyarrow, s3, parquet

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    pyarrow >= 8.0.0
    sqlalchemy >= 2.0.0
    boto3
    pandas

[options.packages.find]
exclude =
    docs*
    lakeshack.tests
